# GEON

./: .gitignore  README.md
docs/: explore.html  form.html  hero-data.js  index.html
examines/: complexity_scaling.py  semantic_density.py  token_comparison.py
examples/: 03_from_osm.py  05_nested_places.py  07_file_io.py
geon/: converter.py  models.py  parser.py
geon-js/: README.md  package-lock.json  package.json  tsconfig.json
geon-js/examples/: 01_basic_usage.ts  02_from_geojson.ts  03_from_osm.ts  04_from_overture.ts  05_nested_places.ts  06_parse_spec_example.ts  07_file_io.ts
geon-js/src/: converter.ts  generator.ts  index.ts  models.ts  parser.ts
geon-py/: README.md  pyproject.toml
geon-py/examples/: 01_basic_usage.py  02_from_geojson.py  04_from_overture.py  06_parse_spec_example.py
geon-py/geon/: __init__.py  generator.py  validator.py  vocab.py
geon-rs/: Cargo.toml  README.md
geon-rs/examples/: 02_from_geojson.rs  03_from_osm.rs  04_from_overture.rs  05_nested_places.rs  06_parse_spec_example.rs  07_file_io.rs  basic_usage.rs
geon-rs/src/: converter.rs  generator.rs  lib.rs  models.rs  parser.rs
geon-vscode/: README.md  package.json  test.geon
geon-vscode/syntaxes/: geon.tmLanguage.json
web/: explore.html  explorer.html  form.html  index.html
