[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "geon"
version = "0.1.0"
description = "GEON: Geospatial Experience-Oriented Notation — A human and LLM-readable format for spatial intelligence"
readme = "README.md"
license = "CC-BY-4.0"
requires-python = ">=3.10"
authors = [{ name = "James Williams", email = "james.williams@nottingham.ac.uk" }]
keywords = ["geospatial", "llm", "gis", "geojson", "spatial", "notation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
osm = ["requests>=2.28"]
overture = ["requests>=2.28"]
tokens = ["tiktoken>=0.5"]
all = ["requests>=2.28", "tiktoken>=0.5"]

[tool.setuptools.packages.find]
include = ["geon*"]
